# Docker-Student-Manage-System

./: .gitignore  CMakeLists.txt  Makefile  README.txt  lab.cpp
cxx/: CMakeLists.txt  Makefile  lab.cpp
tsx/lab.react/: package-lock.json  package.json
tsx/lab.react/src/: App.tsx  AppState.tsx  index.tsx
tsx/lab.react/src/components/forms/: containers.js
tsx/lab.react/src/components/screens/: ContainerScreen.css  ContainerScreen.js  InputScreen.js  LoginScreen.js  PrivateScreen.css  PrivateScreen.js
tsx/lab.react/src/utils/: LabClient.ts
tsx/lab.server/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
tsx/lab.server/src/: Controller.ts  Formatting.ts  LabController.ts  index.ts
tsx/lab.server/src/config/: db.js
tsx/lab.server/src/controllers/: auth.js  container_data.js  docker.js  image_data.js
tsx/lab.server/src/middleware/: auth.js  error.js
tsx/lab.server/src/models/: Container.js  Image.js  User.js
